@@ -18,7 +18,13 @@
 # 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
 # Disable some Perl::Critic violations.
+#
+# I like parentheses.
 ## no critic (ProhibitParensWithBuiltins)
+#
+# It's recommended not to use the constant pragma, but we don't want to use
+# non-core modules like Readonly.
+## no critic (ValuesAndExpressions::ProhibitConstantPragma)
 
 use strict;
 use warnings;
