@@ -305,6 +305,10 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       functionality.
     - X2Go/Server/Agent/NX/Options.pm: port modes "enum" subs to the constant
       pragma to make the code more consistent with the program wrapper.
+    - {X2Go/Server/Agent/NX/Options.pm,
+       x2goserver/lib/x2goupdateoptionsstring}: update Perl critic overrides
+      to allow the constant pragma and document it and other overrides
+      (unless they are self-explanatory).
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
